# mybrain

./: .dockerignore  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  POLISH.md  RULEBOOK.md  brain-research.md
.claude/: settings.json
.claude/checks/: deploy.sh  deploy.sh.example  format.sh  guard.sh  healthcheck.sh  healthcheck.sh.example  ship.sh  test-command  verify.sh
api/: package-lock.json  package.json  tsconfig.json
api/prisma/: dev.db-journal  dev.db.bak-bea973  schema.prisma
api/src/: app.module.ts  main.ts
api/src/accountability/: accountability.controller.ts  accountability.module.ts  accountability.service.spec.ts  accountability.service.ts
api/src/agent/: agent-tools.controller.ts  agent-tools.service.spec.ts  agent-tools.service.ts  agent.controller.ts  (+5 more)
design/agents-redesign/: concept-1-mission-control.html  concept-2-appstore.html  concept-3-chat-first.html
docs/: TASKS-AND-ACTIVITY-MANUAL.md
services/backup/: README.md  home-pull-backup.sh  vps-backup-snapshot.sh  vps-backup-status.sh
services/host/: README.md  codex-runner.server.js  mybrain-mcp.server.mjs
services/rag-mcp/: Dockerfile  README.md  docker-stack.yml  pyproject.toml
services/rag-mcp/src/: main.py
specs/: EXPLORE.md  PLAN.md  SPEC.md  TASKS.md  VAULT.md  linear-backfill.md
web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web/public/: agent-vision.html  emo-showcase.html  privacy.html  push-sw.js  research.html  welcome.html
web/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
(+525 files in other folders)
