[project]
name = "rag-mcp"
version = "0.1.0"
description = "Verbatim document RAG MCP server"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "asyncpg>=0.29.0",
    "openai>=1.40.0",
    "uvicorn>=0.30.0",
    "starlette>=0.37.0",
    "anyio>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
